examples/simple/undefined/UB-CEMX1-bad.output
Error: UB-CEMX1
Description: Division by 0.
Type: Undefined behavior.
See also: C11 sec. 6.5.5:5, J.2:1 item 45
  at main(UB-CEMX1-bad.c:6)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
