examples/simple/undefined/UB-CEMX1-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

int main(void){
	int x = 0;
	int *p = &x;
	5 / *p;
}
